packages/build/tests/error/fixtures/exception/plugin.js
export default {
  onPreBuild() {
    throw new Error('test')
  },
}
